--- a/src/Pages/LandingPage/DentalAppointment/DentalApp.module.css
+++ b/src/Pages/LandingPage/DentalAppointment/DentalApp.module.css
@@ -7,11 +7,10 @@
 }
 
 /* ///////////////////////////////////////////////////////////////
-      profile login 
-  ////////////////////////////////////////////////////////////// */
-
+profile login 
+////////////////////////////////////////////////////////////// */
 .profileLogin {
-  position: absolute;
+  position: fixed;
   z-index: 2000;
   right: 1%;
   top: 13%;
@@ -69,12 +68,17 @@
 }
 
 /* ///////////////////////////////////////////////////////////
-      newNavbar
-  //////////////////////////////////////////////////////////// */
+newNavbar
+//////////////////////////////////////////////////////////// */
 .newNavbar {
   display: flex;
   justify-content: space-between;
   padding: 10px;
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+  box-sizing: border-box;
+  background-color: white;
 }
 
 .navBar2 {
@@ -94,6 +98,15 @@
   font-size: 0.8rem;
   margin-left: 10px;
   text-align: center;
+}
+
+/* ////////////////////////////////////////////////////////////
+filler section 
+/////////////////////////////////////////////////////////////// */
+.fillerSection {
+  height: 12vh;
+  position: relative;
+  z-index: 999;
 }
 
 /* //////////////////////////////////////////////////////////
