--- a/src/Pages/KidneySurgery/Kidney.module.css
+++ b/src/Pages/KidneySurgery/Kidney.module.css
@@ -14,7 +14,6 @@
   width: 100%;
   margin-top: -9.5px;
   padding-top: 50px;
-
 }
 
 
@@ -29,19 +28,21 @@
   border-radius: 50px;
   display: flex;
   gap: 10px;
+
+  cursor: pointer;
 }
 
 #navappointmenttext1 {
-    margin-top: 18px;
+    margin-top: 10px;
     padding-left: 20px;
     font-size: 1.3rem;
 }
 
 #navappointmenticon {
     background-color: white;
-    height: 25px;
+    height: 32px;
     width: 32px;
-    padding-top: 5px;
+    padding-top: 0px;
     padding-left: 10px;
     margin-top: 18px;
     border-radius: 100px;
@@ -73,9 +74,9 @@
 }
 
 .navbar {
-  position: fixed;
+  position: absolute;
   z-index: 1000;
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
   padding: 10px;
   margin-top: 110px;
