--- a/src/Pages/LandingPage/Homepage/Homepage.module.css
+++ b/src/Pages/LandingPage/Homepage/Homepage.module.css
@@ -9,6 +9,67 @@
 /* /////////////////////////////////////////////
 login popup 
 /////////////////////////////////////////////// */
+.loginPop {
+  position: absolute;
+  top: 35%;
+  left: 40%;
+  background-color: white;
+  border-radius: 20px;
+  padding: 25px;
+}
+
+.loginPop div:nth-child(1) {
+  text-align: end;
+  font-size: 0.8rem;
+  cursor: pointer;
+}
+
+.loginPop div:nth-child(2) {
+  font-size: 1.5rem;
+  margin-bottom: 25px;
+}
+
+.loginPop div:nth-child(3) {
+  font-size: 1rem;
+  color: blue;
+  text-align: center;
+  font-size: 1rem;
+}
+
+.loginPop div:nth-child(4) {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 1rem;
+}
+
+.loginPop div:nth-child(5) {
+  margin-top: 5px;
+  text-align: center;
+  font-size: 1.1rem;
+}
+
+.loginPop input {
+  font-size: 1.5rem;
+  color: blue;
+  text-align: center;
+  margin-bottom: 10px;
+  border: 2px solid #20a0d8;
+  border-radius: 8px;
+  padding: 10px 0;
+  margin-bottom: 25px;
+}
+
+.loginSubmit {
+  text-align: center;
+  background-color: #20a0d8;
+  padding: 10px 0px;
+  width: 100%;
+  display: block;
+  border-radius: 8px;
+  color: white;
+  font-size: 1.4rem;
+}
+
 /* ////////////////////////////////////////////////////////////////
 navabar  
 ///////////////////////////////////////////////////////////////// */
@@ -60,7 +121,7 @@ navabar
 .thirdNavbar div {
   background-color: #31c48d47;
   color: rgb(22, 21, 21);
-  padding: 10px 45px;
+  padding: 10px 40px;
   margin: 2px;
   border-radius: 2px;
 }
